# etro

./: .gitignore  Dockerfile  README.md  api.py  const.py  expected_output.json  instructions.md.docx  main.py  normalized.json  pyproject.toml  requirements.txt  run.sh  test_api.py  validation.py
next_task/: GTM_Engineer.txt  leads_100.csv  mock_crm_api.py
recipe_normalizer/: __main__.py  converter.py  models.py  normalizer.py
recipe_normalizer/parsers/: __init__.py  base.py  json_parser.py  xml_parser.py  yaml_parser.py
recipe_normalizer/utils/: cli_args.py
recipes/: challenge_banana_bread.yaml  challenge_holiday_punch.json  challenge_thanksgiving.xml
tests/: conftest.py  test_converter.py  test_normalizer.py  test_parsers.py
tests/e2e/: conftest.py  helpers.py  test_banana_bread.py  test_example_pudding.py  test_example_rice.py  test_holiday_punch.py  test_thanksgiving.py
